<resources>
    <string name="app_name">BasicTask5</string>
    <string name="ip_address">IP address</string>
    <string name="port_number">Port number</string>
    <string name="first">1st Hole No</string>
    <string name="second">2nd Hole No</string>
    <string name="third">3rd Hole No</string>
    <string name="log">Log</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_run">Run</string>
    <string name="button_clear">Clear</string>
</resources>
