<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicTask5Activity">

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="38dp"
        android:text="@string/ip_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/firstHole"
        app:layout_constraintStart_toStartOf="@+id/textAddress"
        app:layout_constraintTop_toTopOf="@+id/textAddress" />

    <TextView
        android:id="@+id/textPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="38dp"
        android:text="@string/port_number"
        app:layout_constraintStart_toStartOf="@+id/editPort"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editLog"
        app:layout_constraintTop_toBottomOf="@+id/textPort" />

    <TextView
        android:id="@+id/firstHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:text="@string/first"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/second"
        app:layout_constraintStart_toStartOf="@+id/editFirstHole"
        app:layout_constraintTop_toBottomOf="@+id/editFirstHole" />

    <TextView
        android:id="@+id/thirdHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/third"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSecondHole" />

    <EditText
        android:id="@+id/editFirstHole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintStart_toStartOf="@+id/firstHole"
        app:layout_constraintTop_toBottomOf="@+id/firstHole" />

    <EditText
        android:id="@+id/editThirdHole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editFirstHole"
        app:layout_constraintStart_toStartOf="@+id/thirdHole"
        app:layout_constraintTop_toBottomOf="@+id/thirdHole" />

    <EditText
        android:id="@+id/editSecondHole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editThirdHole"
        app:layout_constraintStart_toStartOf="@+id/secondHole"
        app:layout_constraintTop_toBottomOf="@+id/secondHole" />

    <TextView
        android:id="@+id/textLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="450dp"
        android:layout_marginBottom="12dp"
        android:text="@string/log"
        app:layout_constraintBottom_toTopOf="@+id/editLog"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:onClick="handleButtonConnect"
        android:text="@string/button_connect"
        app:layout_constraintBaseline_toBaselineOf="@+id/editFirstHole"
        app:layout_constraintEnd_toEndOf="@+id/editPort"
        app:layout_constraintStart_toStartOf="@+id/editPort" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="100dp"
        android:onClick="handleButtonDisconnect"
        android:text="@string/button_disconnect"
        app:layout_constraintBottom_toBottomOf="@+id/editLog"
        app:layout_constraintEnd_toEndOf="@+id/buttonRun"
        app:layout_constraintStart_toStartOf="@+id/buttonConnect"
        app:layout_constraintTop_toTopOf="@+id/editFirstHole" />

    <Button
        android:id="@+id/buttonRun"
        android:layout_width="176dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="49dp"
        android:onClick="handleButtonRun"
        android:text="@string/button_run"
        app:layout_constraintEnd_toStartOf="@+id/editLog"
        app:layout_constraintTop_toBottomOf="@+id/editSecondHole" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="176dp"
        android:layout_height="63dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="103dp"
        android:onClick="handleButtonClear"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLog" />

    <EditText
        android:id="@+id/editLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRun"
        app:layout_constraintEnd_toEndOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="@+id/textLog"
        app:layout_constraintTop_toTopOf="@+id/editPort" />

</androidx.constraintlayout.widget.ConstraintLayout>